Fix: align panel padding between sass & js theme

--- a/public/sass/_variables.generated.scss
+++ b/public/sass/_variables.generated.scss
@@ -193,7 +193,7 @@ $side-menu-width: 60px;
 
 // dashboard
 $dashboard-padding: $space-md;
-$panel-padding: 0 $space-md $space-sm $space-md;
+$panel-padding: 0 16px 8px 16px;
 
 // tabs
 $tabs-padding: 10px 15px 9px;
